--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "html-webpack-inline-svg-plugin": "^1.2.4",
     "html-webpack-plugin": "^3.2.0",
     "htmlhint": "^0.11.0",
-    "htmlhint-loader": "^1.3.1",
     "husky": "^3.0.5",
     "image-webpack-loader": "^5.0.0",
     "jsdoc": "^3.6.3",
@@ -63,6 +62,8 @@
     "html5shiv": "^3.7.3",
     "leaflet": "^1.6.0",
     "leaflet-geosearch": "^2.7.0",
+    "leaflet-minimap": "^3.6.1",
+    "leaflet.locatecontrol": "^0.68.0",
     "selectivizr": "^1.0.3",
     "stylelint": "^11.0.0",
     "webpack-merge": "^4.2.1"
